Rename package to com.qali.ipoint and app name to ipoint

--- a/settings.gradle
+++ b/settings.gradle
@@ -28,5 +28,5 @@ dependencyResolutionManagement {
         mavenCentral()
     }
 }
-rootProject.name = "MP Face Landmarker"
+rootProject.name = "ipoint"
 include ':app'
