--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,11 +20,11 @@ plugins {
 }
 
 android {
-    namespace 'com.google.mediapipe.examples.facelandmarker'
+    namespace 'com.qali.ipoint'
     compileSdk 34
 
     defaultConfig {
-        applicationId "com.google.mediapipe.examples.facelandmarker"
+        applicationId "com.qali.ipoint"
         minSdk 24
         targetSdk 34
         versionCode 1
