Fix GitHub Actions workflow: remove invalid downloadAllTasks task (downloadTaskFile runs automatically via preBuild dependency)

--- a/.github/workflows/build-debug.yml
+++ b/.github/workflows/build-debug.yml
@@ -28,7 +28,7 @@ jobs:
       run: chmod +x gradlew
       
     - name: Download MediaPipe model assets
-      run: ./gradlew downloadAllTasks
+      run: ./gradlew :app:downloadTaskFile
       
     - name: Build debug APK
       run: ./gradlew assembleDebug
