Add settings with movement adjusters, eye position effects, distance-based range, pointer overlay service for system-wide visibility, and integrate all tracking calculations

--- a/.github/workflows/build-debug.yml
+++ b/.github/workflows/build-debug.yml
@@ -27,11 +27,9 @@ jobs:
     - name: Grant execute permission for gradlew
       run: chmod +x gradlew
       
-    - name: Download MediaPipe model assets
-      run: ./gradlew :app:downloadTaskFile
-      
     - name: Build debug APK
       run: ./gradlew assembleDebug
+      # Note: downloadTaskFile will run automatically via preBuild.dependsOn
       
     - name: Upload APK artifact
       uses: actions/upload-artifact@v4
