Fix foreground service type, make pointer visible in background with FLAG_LAYOUT_NO_LIMITS, fix settings back button, make logcat functional and selectable with LogcatManager

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -72,7 +72,7 @@
             android:name=".PointerOverlayService"
             android:enabled="true"
             android:exported="false"
-            android:foregroundServiceType="mediaProjection">
+            android:foregroundServiceType="none">
         </service>
     </application>
 
