Fix foreground service type error: remove specialUse type and property, use standard foreground service approach

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -71,8 +71,7 @@
         <service
             android:name=".PointerOverlayService"
             android:enabled="true"
-            android:exported="false"
-            android:foregroundServiceType="none">
+            android:exported="false">
         </service>
     </application>
 
